--- a/script/Dockerfile
+++ b/script/Dockerfile
@@ -4,12 +4,8 @@ FROM maven:3.3-jdk-8
 RUN git clone --recursive https://github.com/shruthikuki/UniStuttgart-PuppetGroup-gRPC-Generic-DeploymentScript.git
 WORKDIR /UniStuttgart-PuppetGroup-gRPC-Generic-DeploymentScript
 
-# Run maven
-RUN mvn clean package
-RUN ls target
-
 COPY config.properties /
 
-WORKDIR /
+WORKDIR /UniStuttgart-PuppetGroup-gRPC-Generic-DeploymentScript
 
-CMD sleep 20s; java -cp /UniStuttgart-PuppetGroup-gRPC-Generic-DeploymentScript/target/DeploymentScript-0.0.1-SNAPSHOT-jar-with-dependencies.jar cloudlab.ops.GenericOpsClient
+CMD cp /api/main.proto /UniStuttgart-PuppetGroup-gRPC-Generic-DeploymentScript/src/main/proto; ls /UniStuttgart-PuppetGroup-gRPC-Generic-DeploymentScript/src/main/proto; mvn clean install; sleep 5s; java -cp /UniStuttgart-PuppetGroup-gRPC-Generic-DeploymentScript/target/DeploymentScript-0.0.1-SNAPSHOT-jar-with-dependencies.jar cloudlab.ops.GenericOpsClient
